--- a/awere/index.html
+++ b/awere/index.html
@@ -18,6 +18,152 @@
 <div class="main-wrapper">
 
 	<header class="header">
+		<button class="toggle-menu">
+			<label for="dropdown-menu-tablet" class="label-tablet"><span class="icon icon-Menu"></span></label>
+		</button>
+		<input type="checkbox" id="dropdown-menu-tablet" value="0" name="" class="input-tablet">
+		<div class="dropdown-content-tablet">
+			<div class="dropdown-content-tablet__item">
+				<h4 class="dropdown-content-tablet__title">Men</h4>
+				<ul class="dropdown-menu">
+					<li class="dropdown-menu__item ">
+						<a href="#" class="dropdown-menu__link">Bags</a>
+					</li>
+					<li class="dropdown-menu__item">
+						<a href="#" class="dropdown-menu__link">Caps & Hats</a>
+					</li>
+					<li class="dropdown-menu__item">
+						<a href="#" class="dropdown-menu__link">Gifts</a>
+					</li>
+					<li class="dropdown-menu__item">
+						<a href="#" class="dropdown-menu__link">Grooming</a>
+					</li>
+					<li class="dropdown-menu__item">
+						<a href="#" class="dropdown-menu__link">Hoodies & Sweatshirts</a>
+					</li>
+					<li class="dropdown-menu__item">
+						<a href="#" class="dropdown-menu__link">Jackets & Coats</a>
+					</li>
+					<li class="dropdown-menu__item">
+						<a href="#" class="dropdown-menu__link">Jeans</a>
+					</li>
+					<li class="dropdown-menu__item">
+						<a href="#" class="dropdown-menu__link">Jewellery</a>
+					</li>
+					<li class="dropdown-menu__item">
+						<a href="#" class="dropdown-menu__link">Joggers</a>
+					</li>
+					<li class="dropdown-menu__item">
+						<a href="#" class="dropdown-menu__link">Jumpers & Cardigans</a>
+					</li>
+					<li class="dropdown-menu__item">
+						<a href="#" class="dropdown-menu__link">Leather Jackets</a>
+					</li>
+					<li class="dropdown-menu__item">
+						<a href="#" class="dropdown-menu__link">Long Sleeve T-Shirts</a>
+					</li>
+					<li class="dropdown-menu__item">
+						<a href="#" class="dropdown-menu__link">Loungewear</a>
+					</li>
+					<li class="dropdown-menu__item">
+						<a href="#" class="dropdown-menu__link">Polo Shirts</a>
+					</li>
+					<li class="dropdown-menu__item">
+						<a href="#" class="dropdown-menu__link">Sunglasses</a>
+					</li>
+					<li class="dropdown-menu__item">
+						<a href="#" class="dropdown-menu__link">Swimwear</a>
+					</li>
+				</ul>
+			</div>
+			<div class="dropdown-content-tablet__item">
+				<h4 class="dropdown-content-tablet__title">Women</h4>
+				<ul class="dropdown-menu">
+					<li class="dropdown-menu__item ">
+						<a href="#" class="dropdown-menu__link">Shirts</a>
+					</li>
+					<li class="dropdown-menu__item">
+						<a href="#" class="dropdown-menu__link">Shoes, Boots & Trainers</a>
+					</li>
+					<li class="dropdown-menu__item">
+						<a href="#" class="dropdown-menu__link">Shorts</a>
+					</li>
+					<li class="dropdown-menu__item">
+						<a href="#" class="dropdown-menu__link">Suits & Blazers</a>
+					</li>
+					<li class="dropdown-menu__item">
+						<a href="#" class="dropdown-menu__link">Sunglasses</a>
+					</li>
+					<li class="dropdown-menu__item">
+						<a href="#" class="dropdown-menu__link">Swimwear</a>
+					</li>
+				</ul>
+
+				<h4 class="dropdown-content-tablet__title">Accesories</h4>
+				<ul class="dropdown-menu">
+					<li class="dropdown-menu__item ">
+						<a href="#" class="dropdown-menu__link">Hair Accesories</a>
+					</li>
+					<li class="dropdown-menu__item">
+						<a href="#" class="dropdown-menu__link">Sunglasses & Readers</a>
+					</li>
+					<li class="dropdown-menu__item">
+						<a href="#" class="dropdown-menu__link">Socks & Tights</a>
+					</li>
+					<li class="dropdown-menu__item">
+						<a href="#" class="dropdown-menu__link">Hats</a>
+					</li>
+					<li class="dropdown-menu__item">
+						<a href="#" class="dropdown-menu__link">Scarves & Gloves</a>
+					</li>
+					<li class="dropdown-menu__item">
+						<a href="#" class="dropdown-menu__link">Jackets & Coats</a>
+					</li>
+					<li class="dropdown-menu__item">
+						<a href="#" class="dropdown-menu__link">Rompers & Jumpsuits</a>
+					</li>
+				</ul>
+			</div>
+			<div class="dropdown-content-tablet__item">
+				<h4 class="dropdown-content-tablet__title">Kids</h4>
+				<ul class="dropdown-menu">
+					<li class="dropdown-menu__item ">
+						<a href="#" class="dropdown-menu__link">New Arrrivals</a>
+					</li>
+					<li class="dropdown-menu__item">
+						<a href="#" class="dropdown-menu__link">Dresses</a>
+					</li>
+					<li class="dropdown-menu__item">
+						<a href="#" class="dropdown-menu__link">Tops</a>
+					</li>
+					<li class="dropdown-menu__item">
+						<a href="#" class="dropdown-menu__link">Sweaters & Knits</a>
+					</li>
+					<li class="dropdown-menu__item">
+						<a href="#" class="dropdown-menu__link">Jackets & Coats</a>
+					</li>
+					<li class="dropdown-menu__item">
+						<a href="#" class="dropdown-menu__link">Rompers & Jumpsuits</a>
+					</li>
+				</ul>
+
+				<h4 class="dropdown-content-tablet__title"><span class="text-error">Sale -70%</span> </br> Lookbook </br> blog</h4>
+				<div class="hr"></div>
+
+				<ul class="dropdown-menu">
+					<li class="dropdown-menu__item ">
+						<a href="#" class="dropdown-menu__link">Shipping</a>
+					</li>
+					<li class="dropdown-menu__item">
+						<a href="#" class="dropdown-menu__link">Playment</a>
+					</li>
+					<li class="dropdown-menu__item">
+						<a href="#" class="dropdown-menu__link">Help?</a>
+					</li>
+				</ul>
+			</div>
+			<div class="dropdown-content-tablet__item"></div>
+		</div>
 		<div class="logo">
 			<a href="#"><img src="img/Logo.png" alt=""></a>
 		</div>
